# Finder-app

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
configs/: default_config.json
docs/product/: 20260429_smart_money_pro_requirements_for_finder_app.md
docs/release/: 20260507123000000_cloudflare_d1_history_persistence.md  20260509190000000_finder_ai_v6_relay_analysis.md  20260512090000000_falcon_weekly_profit_desktop.md  README.md
docs/report/: 20260425160351207_pipeline_smoke_commands.md
docs/research/: 20260425180939300_split_player_chain_validation.md  20260429_smart_money_api_integration.md
docs/spec/: 20260505005939537_finder_ai_smartpro_contract.md  20260506193000000_cloudflare_d1_history_persistence.sql
frontend/: .env.example  README.md  index.html  metadata.json  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
scripts/: Install-DesktopShortcut.ps1  Open-PolymarketWeather.ps1  Open-PolymarketWeather.vbs
src/polymarket_weather_tool/: __init__.py  __main__.py  analysis.py  client.py  cloud_archive.py  cloudflare_backend.py  config.py  env.py  falcon_client.py  finder_ai_contract.py  finder_ai_generation.py  history_ledger.py  history_provider.py  history_registry.py  labels.py  metrics.py  (+3 more)
tests/: test_audit_upgrade_scaffold.py  test_client.py  test_config_overrides.py  test_env.py  test_falcon_client.py  test_finder_ai_generation.py  test_labels.py  test_metrics.py  test_pipeline_smoke.py  test_report.py  test_server.py  test_time_partition_probe.py  test_upgrade_behaviors.py
(+15 files in other folders)
