[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-weather-tool"
version = "0.2.0"
description = "Local console for Polymarket weather wallet screening, tagging, relay analysis, and DeepSeek briefs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
polymarket-weather = "polymarket_weather_tool.__main__:main"
polymarket-weather-server = "polymarket_weather_tool.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
